--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -39,7 +39,7 @@
       </table>
     </div>
     <div class="action-container">
-      <button mat-raised-button color="primary">Load Saved Items</button>
+      <button mat-raised-button color="primary" (click)="loadSavedItems">Load Saved Items</button>
       <button mat-raised-button color="primary">Clear</button>
       <button mat-raised-button color="primary">Submit</button>
     </div>
